--- a/rakieta/src/assets/scss/_variables.scss
+++ b/rakieta/src/assets/scss/_variables.scss
@@ -1,3 +1,6 @@
 $color-primary: #0074d9;
 $color-secondary: #7fdbff;
 $color-tertiary: #39cccc;
+
+// Topbar Layout
+$tobpar-layout-background: gray;
