--- a/rakieta/src/assets/base.css
+++ b/rakieta/src/assets/base.css
@@ -1,4 +1,9 @@
 /* color palette from <https://github.com/vuejs/theme> */
+.wcag * {
+  background: black !important;
+  color: yellow;
+  border-color: yellow;
+}
 :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
